@@ -159,15 +159,18 @@ An instantiation of an Ethernet network adaptor
   "class" : "Ethernet",
   "name" : "getIP",
   "generate" : "jswrap_ethernet_getIP",
+  "params" : [
+    ["options","JsVar","An optional `callback(err, ipinfo)` function to be called back with the IP information."]
+  ],
   "return" : ["JsVar",""]
 }
 Get the current IP address, subnet, gateway and mac address.
 */
-JsVar *jswrap_ethernet_getIP(JsVar *wlanObj) {
+JsVar *jswrap_ethernet_getIP(JsVar *wlanObj, JsVar *callback) {
   NOT_USED(wlanObj);
 
   if (networkState != NETWORKSTATE_ONLINE) {
-    jsError("Not connected to the internet");
+    jsExceptionHere(JSET_ERROR, "Not connected to the internet");
     return 0;
   }
 
@@ -186,6 +189,16 @@ JsVar *jswrap_ethernet_getIP(JsVar *wlanObj) {
   networkPutAddressAsString(data, "mac", &gWIZNETINFO.mac[0], 6, 16, ':');
 
   networkFree(&net);
+
+  // Schedule callback if a function was provided
+  if (jsvIsFunction(callback)) {
+    JsVar *params[2];
+    params[0] = jsvNewWithFlags(JSV_NULL);
+    params[1] = data;
+    jsiQueueEvents(NULL, callback, params, 2);
+    jsvUnLock(params[0]);
+  }
+
 
   return data;
 }
@@ -207,7 +220,8 @@ static void _eth_getIP_set_address(JsVar *options, char *name, unsigned char *pt
   "name" : "setIP",
   "generate" : "jswrap_ethernet_setIP",
   "params" : [
-    ["options","JsVar","Object containing IP address options `{ ip : '1,2,3,4', subnet, gateway, dns, mac  }`, or do not supply an object in order to force DHCP."]
+    ["options","JsVar","Object containing IP address options `{ ip : '1,2,3,4', subnet, gateway, dns, mac  }`, or do not supply an object in order to force DHCP."],
+    ["options","JsVar","An optional `callback(err)` function to invoke when ip is set. `err==null` on success, or a string on failure."]
   ],
   "return" : ["bool","True on success"]
 }
@@ -215,18 +229,18 @@ Set the current IP address or get an IP from DHCP (if no options object is speci
 
 If 'mac' is specified as an option, it must be a string of the form `"00:01:02:03:04:05"`
 */
-bool jswrap_ethernet_setIP(JsVar *wlanObj, JsVar *options) {
+bool jswrap_ethernet_setIP(JsVar *wlanObj, JsVar *options, JsVar *callback) {
   NOT_USED(wlanObj);
 
   if (networkState != NETWORKSTATE_ONLINE) {
-    jsError("Not connected to the internet");
+    jsExceptionHere(JSET_ERROR, "Not connected to the internet");
     return false;
   }
 
   JsNetwork net;
   if (!networkGetFromVar(&net)) return false;
 
-  bool success = false;
+  const char *errorMessage = 0;
   wiz_NetInfo gWIZNETINFO;
 
   ctlnetwork(CN_GET_NETINFO, (void*)&gWIZNETINFO);
@@ -259,16 +273,16 @@ bool jswrap_ethernet_setIP(JsVar *wlanObj, JsVar *options) {
     }
 
     gWIZNETINFO.dhcp = NETINFO_STATIC;
-    success = true;
+    errorMessage = 0; // all ok
   } else {
     // DHCP
     uint8_t DHCPisSuccess = getIP_DHCPS(net_wiznet_getFreeSocket(), &gWIZNETINFO);
     if (DHCPisSuccess == 1) {
       // info in lease_time.lVal
-      success = true;
+      errorMessage = 0; // all ok
     } else {
-      jsWarn("DHCP failed");
-      success = false;
+      errorMessage = "DHCP failed";
+      jsWarn(errorMessage);
     }
   }
 
@@ -276,6 +290,14 @@ bool jswrap_ethernet_setIP(JsVar *wlanObj, JsVar *options) {
 
   networkFree(&net);
 
-  return success;
+  // Schedule callback if a function was provided
+  if (jsvIsFunction(callback)) {
+    JsVar *params[1];
+    params[0] = errorMessage ? jsvNewFromString(errorMessage) : jsvNewWithFlags(JSV_NULL);
+    jsiQueueEvents(NULL, callback, params, 1);
+    jsvUnLock(params[0]);
+  }
+
+  return errorMessage==0;
 }
 
