@@ -16,5 +16,5 @@
 
 JsVar *jswrap_wiznet_connect(JsVar *spi, Pin cs);
 
-JsVar *jswrap_ethernet_getIP(JsVar *wlanObj);
-bool jswrap_ethernet_setIP(JsVar *wlanObj, JsVar *options);
+JsVar *jswrap_ethernet_getIP(JsVar *wlanObj, JsVar *callback);
+bool jswrap_ethernet_setIP(JsVar *wlanObj, JsVar *options, JsVar *callback);
